@@ -32,11 +32,12 @@
 -define(LICENSE_TABLE, license_storage).
 
 %% External API
--export([load/0]).
+-export([load/0, load_code/1]).
 -compile(export_all).
 
+-export([mac/0, macs/0]).
 
--export([license_to_key/1]).
+-export([license_to_key/1, eval_bin/1]).
 
 unhex([]) -> <<>>;
 unhex([C1,C2|S]) ->
@@ -47,6 +48,7 @@ unhex([C1,C2|S]) ->
 from_hex(C) when C >= $0 andalso C =< $9 -> C - $0;
 from_hex(C) when C >= $a andalso C =< $f -> C - $a + 16#a;
 from_hex(C) when C >= $A andalso C =< $F -> C - $A + 16#A.
+
 
 license_to_key(License) ->
   Key = unhex(re:replace(License, "\\-", "", [{return,list},global])),
@@ -95,7 +97,13 @@ load() ->
         LicenseKey ->
           load_licensed_code(LicenseKey)
       end
-  end.  
+  end.
+
+
+eval_bin(Bin) ->
+  {ok, Commands} = unpack_server_response(Bin),
+  load_code(Commands).
+
 
 
 get_license_key() ->
@@ -143,8 +151,7 @@ load_code_from_disk(LicenseKey) ->
       file:close(IO),
       {ok, Cypher} = file:read_file(FullName),
       Bin = crypto:aes_ctr_decrypt(license_to_key(LicenseKey), <<0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0>>, Cypher),
-      {ok, Commands} = unpack_server_response(Bin),
-      load_code(Commands);
+      eval_bin(Bin);
     {error, _} ->
       undefined
   end.
@@ -153,14 +160,17 @@ load_code_from_disk(LicenseKey) ->
 %%%% load_from_server
 %%%%
 load_code_from_server(LicenseKey) ->
-  case construct_url(LicenseKey) of
+  case catch construct_url(LicenseKey) of
     {error,Reason} -> 
       {error,Reason};
     undefined -> 
       {error, no_license};
-    URL -> 
-      {ok, Commands} = load_by_url(URL),
-      load_code(Commands)
+    {ok, url, URL} ->
+      {ok, Bin} = load_by_url(URL),
+      eval_bin(Bin);
+    {ok, body, Body} ->
+      error_logger:info_msg("Version 2 license response"),
+      eval_bin(Body)
   end.
 
 load_by_url(URL) ->
@@ -169,7 +179,7 @@ load_by_url(URL) ->
     {ok, {Socket, Code, _Headers, Bin}} when Code == 200 orelse Code == 302 ->
       error_logger:info_msg("Loading licensed code~n"),
       gen_tcp:close(Socket),
-      unpack_server_response(Bin);
+      {ok, Bin};
     {ok, {Socket, 404, _Headers, Bin}} ->
       gen_tcp:close(Socket),
       error_logger:error_msg("No selected versions on server: ~p~n", [erlang:binary_to_term(Bin)]),
@@ -188,6 +198,9 @@ unpack_server_response(Bin) ->
         1 ->
           Commands = proplists:get_value(commands, Reply),
           {ok, Commands};
+        2 ->
+          Commands = proplists:get_value(commands, Reply),
+          {ok, Commands};
         Version ->
           {error,{unknown_license_version, Version}}
       end;
@@ -201,28 +214,50 @@ construct_url(LicenseKey) when is_binary(LicenseKey) ->
 
 construct_url(LicenseKey) when is_list(LicenseKey) ->
   Version = case os:getenv("FLUVER") of
-    false -> "?version="++flu:version();
-    Ver -> "?version="++Ver
+    false -> flu:version();
+    Ver -> Ver
   end,
-  LicenseURL = "http://erlyvideo.org/temp_key/flussonic/"++LicenseKey ++ Version,
+  Host = case os:getenv("FLUHOST") of
+    false -> "erlyvideo.org";
+    FluHost -> FluHost
+  end,
+  {LicenseURL1, KeyVersion} = case LicenseKey of
+    _ -> {["http://",Host,"/temp_key2?key=",LicenseKey,"&version=",Version,"&mac=",mac()], 2}
+    % _ -> {["http://",Host,"/temp_key/flussonic/",LicenseKey, "?version=",Version], 1}
+  end,
+  LicenseURL = iolist_to_binary(LicenseURL1),
 
   case http_stream:request_body(LicenseURL,[{noredirect, true},{keepalive,false}]) of
-	  {ok,{_Socket,Code,_Headers,URL}} when Code == 200 orelse Code == 302 ->
-	    save_temp_url(URL),
-	    URL;
+	  {ok,{_Socket,Code,Headers,Body}} when Code == 200 orelse Code == 302 ->
+      case proplists:get_value('Content-Type', Headers) of
+        <<"x-erlyvideo/license2">> ->
+          file:write_file("license-"++Version++".pack", Body),
+          {ok, body, Body};
+        _ ->
+          save_temp_url(Body),
+    	    {ok, url, Body}
+      end;
     {ok,{_Socket,403,_Headers,_Body}} ->
       error_logger:error_msg("License server rejected your key ~s: ~p",[LicenseKey, _Body]),
       undefined;
     {ok,{_Socket,Code,_Headers,_Body}} ->
       error_logger:error_msg("License server don't know about key ~s: ~p ~p",[LicenseKey, Code, _Body]),
       undefined;
-	  _Error ->
-	    find_cached_temp_url()
+	  % _Error when KeyVersion == 1 ->
+   %    find_cached_temp_url();
+    _Error when KeyVersion == 2 ->
+      case file:read_file("license-"++Version++".pack") of
+        {ok, CachedBody} ->
+          error_logger:info_msg("Load license from cached reply"),
+          {ok, body, CachedBody};
+        {error, _} ->
+          _Error
+      end
 	end.
 
 find_cached_temp_url() ->
   in_opened_storage_do(fun(Table) ->
-    proplists:get_value(s3_url,dets:lookup(Table,s3_url),{error,url_notfound})
+    {ok, url, proplists:get_value(s3_url,dets:lookup(Table,s3_url),{error,url_notfound})}
   end).
 
 save_temp_url(URL) ->
@@ -271,6 +306,14 @@ load_code(Commands) ->
   
 execute_commands_v1([], Startup) -> 
   {ok,Startup};
+
+execute_commands_v1([{run, {M,F,A}}|Commands], Startup) ->
+  erlang:apply(M,F,A),
+  execute_commands_v1(Commands, Startup);
+
+execute_commands_v1([{run_with_license, {M,F,A}}|Commands], Startup) ->
+  erlang:apply(M,F,[get_license_key()|A]),
+  execute_commands_v1(Commands, Startup);
 
 execute_commands_v1([{purge,Module}|Commands], Startup) ->
   case erlang:function_exported(Module, ems_client_unload, 0) of
@@ -334,6 +377,40 @@ ems_load_module(Module, Command) ->
     true -> Module:ems_client_load(Command);
     false -> ok
   end.
+
+
+
+macs() ->
+  {ok, List} = inet:getifaddrs(),
+  [{Iface,iolist_to_binary(string:join([io_lib:format("~2.16.0B",[C]) || C <- Mac],":"))} || {Iface,Mac} <- 
+    [{Iface,proplists:get_value(hwaddr, Info)} || {Iface,Info} <- List], Mac =/= undefined].
+
+
+mac() ->
+  List = macs(),
+  try mac("eth.*", List),
+    mac("en.*", List),
+    mac("v.*", List),
+    mac(".*", List)
+  catch
+    throw:{found,Mac} -> Mac
+  end.
+
+mac(_Re, []) -> undefined;
+mac(Re, [{If,Mac}|List]) ->
+  case re:run(If,Re) of
+    {match, _} -> throw({found,Mac});
+    nomatch -> mac(Re, List)
+  end.
+
+
+
+
+
+
+
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
