@@ -1,3 +1,7 @@
+flussonic (3.67.1)
+
+  * New licensing system
+
 flussonic (3.66.5)
 
   * Added mpegts http basic authentication
